--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "eslintConfig": {
     "extends": "react-app",
     "plugins": [
@@ -39,6 +44,8 @@
   },
   "devDependencies": {
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^2.0.2"
+    "prettier": "^2.0.2",
+    "pretty-quick": "^2.0.1",
+    "husky": "^4.2.3"
   }
 }
